Continuation de la fonctionnalité ticketing

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -165,12 +165,18 @@
     "DASHBOARD_FORUMPOST_UPDATEDAT": "Updated At",
     "DASHBOARD_FORUMPOST_REPLYBTN": "Reply",
 
-    "DASHBOARD_TICKET_TITLE": "Tickets",
-    "DASHBOARD_TICKET_NOTICKET": "You do not have created any ticket yet",
-    "DASHBOARD_TICKET_TICKETTITLE": "Title",
-    "DASHBOARD_TICKET_STATUS": "Status",
-    "DASHBOARD_TICKET_CREATEDAT": "Created at",
-    "DASHBOARD_TICKET_UPDATEDAT": "Updated at",
+    "DASHBOARD_TICKETS_TITLE": "Tickets",
+    "DASHBOARD_TICKETS_NOTICKET": "You do not have created any ticket yet",
+    "DASHBOARD_TICKETS_TICKETTITLE": "Title",
+    "DASHBOARD_TICKETS_STATUS": "Status",
+    "DASHBOARD_TICKETS_CREATEDAT": "Created at",
+    "DASHBOARD_TICKETS_UPDATEDAT": "Updated at",
+
+    "DASHBOARD_TICKET_TITLE": "Ticket",
+    "DASHBOARD_TICKET_NOCOMMENT": "No comment yet",
+    "DASHBOARD_TICKET_COMMENT_AUTHOR": "Author",
+    "DASHBOARD_TICKET_COMMENT_CONTENT": "Message",
+    "DASHBOARD_TICKET_COMMENT_CREATEDAT": "Created At",
 
     "DASHBOARD_ADMIN_TITLE": "Administration",
     "DASHBOARD_ADMIN_USERTAB": "Users",
