--- a/src/langs/fr.json
+++ b/src/langs/fr.json
@@ -169,12 +169,18 @@
     "DASHBOARD_FORUMPOST_UPDATEDAT": "Date de mise à jour",
     "DASHBOARD_FORUMPOST_REPLYBTN": "Répondre",
 
-    "DASHBOARD_TICKET_TITLE": "Tickets",
-    "DASHBOARD_TICKET_NOTICKET": "Vous n'avez créé aucun ticket pour le moment",
-    "DASHBOARD_TICKET_TICKETTITLE": "Titre du ticket",
-    "DASHBOARD_TICKET_STATUS": "Statut",
-    "DASHBOARD_TICKET_CREATEDAT": "Date de création",
-    "DASHBOARD_TICKET_UPDATEDAT": "Date de mise à jour",
+    "DASHBOARD_TICKETS_TITLE": "Tickets",
+    "DASHBOARD_TICKETS_NOTICKET": "Vous n'avez créé aucun ticket pour le moment",
+    "DASHBOARD_TICKETS_TICKETTITLE": "Titre du ticket",
+    "DASHBOARD_TICKETS_STATUS": "Statut",
+    "DASHBOARD_TICKETS_CREATEDAT": "Date de création",
+    "DASHBOARD_TICKETS_UPDATEDAT": "Date de mise à jour",
+
+    "DASHBOARD_TICKET_TITLE": "Ticket",
+    "DASHBOARD_TICKET_NOCOMMENT": "Aucun commentaire pour le moment",
+    "DASHBOARD_TICKET_COMMENT_AUTHOR": "Auteur",
+    "DASHBOARD_TICKET_COMMENT_CONTENT": "Message",
+    "DASHBOARD_TICKET_COMMENT_CREATEDAT": "Date de création",
 
     "DASHBOARD_ADMIN_TITLE": "Administration",
     "DASHBOARD_ADMIN_USERTAB": "Utilisateurs",
