- Fonctionnalité de gestion des tickets complétée - Rajout des traductions manquantes du site

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -33,7 +33,7 @@
     "API_CONTACT_NO_EMAIL": "The email was not provided!",
     "API_CONTACT_NO_MESSAGE": "The message was not provided!",
     "API_CONTACT_SUCCESS": "Your message has been sent!",
-    "API_CONTACT_ERROR": "An error occured while sending your message!",
+    "API_CONTACT_ERROR": "An error occurred while sending your message!",
 
     "HOME_REGISTER_TITLE": "Register",
     "HOME_REGISTER_EMAIL": "Your email",
@@ -50,8 +50,19 @@
     "HOME_CGU_TITLESHORT": "TERMS AND CONDITIONS",
     "HOME_CGU_TITLE": "Terms and conditions",
 
+    "API_TICKET_NOACCESS": "You do not have access to this ticket!",
+    "API_TICKET_NOPAGE": "The page was not given!",
+    "API_TICKET_NOSIZEPAGE": "The page size was not given!",
+    "API_TICKET_GET_TICKETS_ERROR": "An unexcepted error occurred while getting the tickets",
+    "API_TICKETS_NO_NAME_GIVEN": "The name was not given!",
+    "API_TICKETS_NO_DESCRIPTION_GIVEN": "The description was not given!",
+    "API_TICKETS_CREATE_ERROR": "An unexcepted error occurred while creating the ticket",
+    "API_TICKET_NOT_FOUND": "The ticket has not been found!",
+    "API_TICKET_GET_COMMENTS_ERROR": "An unexcepted error occurred while getting the comments",
     "API_USER_NO_USERNAME_PROVIDED": "The email was not provided!",
     "API_USER_NO_PASSWORD_PROVIDED": "The password was not provided!",
+    "API_USER_GET_USER_ERROR": "An unexcepted error occurred while getting the user!",
+    "API_USER_GET_CONTACTS_ERROR": "An unexcepted error occurred while getting the contacts!",
     "API_USER_NO_USER": "The login/password pair is incorrect!",
     "API_USER_NOACCESS": "You do not have access to this user's information!",
     "API_USER_NOT_FOUND": "The user is not found!",
@@ -65,7 +76,7 @@
     "API_USER_CREATE_NO_PASSWORDCHECK": "The password check was not provided!",
     "API_USER_CREATE_PASSWORD_NOT_MATCH": "The password verification do not match with the password!",
     "API_USER_CREATE_INVITE_EXPIRED": "The invitation is not found or has been expired!",
-    "API_USER_CREATE_USER_ERROR": "A unexcepted error occured while creating the user!",
+    "API_USER_CREATE_USER_ERROR": "A unexcepted error occurred while creating the user!",
     "API_USER_CREATE_USER_SUCCESS": "Congratulation! You are now registered! You can connect now on the Sign In page",
     "API_USER_INVITE_NO_TOKEN": "The invite code was not provided!",
     "API_USER_INVITE_NO_EMAIL": "The invite email was not provided!",
@@ -82,17 +93,21 @@
     "API_MESSAGE_NOPAGE": "No page received!",
     "API_MESSAGE_NOSIZEPAGE": "No page size received!",
     "API_MESSAGE_USER_NOT_FOUND": "The user is not found!",
+    "API_MESSAGE_GET_CONTACTS_ERROR": "An error occurred while getting the contacts!",
+    "API_MESSAGE_GET_MESSAGES_ERROR": "An error occurred while getting the message!",
     "API_MESSAGE_CONTACT_NOT_FOUND": "The contact is not found!",
     "API_MESSAGE_NO_MESSAGE_GIVEN": "No message given!",
-    "API_MESSAGE_CREATE_ERROR": "An error occurred while deleting the message!",
+    "API_MESSAGE_CREATE_ERROR": "An error occurred while creating the message!",
 
+    "API_FORUM_GET_CATEGORIES_ERROR": "An unexcepted error occurred while getting the categories!",
     "API_FORUM_NO_NAME_GIVEN": "No category name given!",
     "API_FORUM_NO_DESCRIPTION_GIVEN": "No description was not given!",
-    "API_FORUM_CREATE_CATEGORY_ERROR": "An error occured while creating the category!",
+    "API_FORUM_CREATE_CATEGORY_ERROR": "An error occurred while creating the category!",
     "API_FORUM_REORDER_CATEGORY_NO_DIRECTION": "The move direction was not given!",
-    "API_FORUM_REORDER_CATEGORY_ERROR": "An error occured while moving the category!",
-    "API_FORUM_DELETE_CATEGORY_ERROR": "An error occured while deleting the category!",
+    "API_FORUM_REORDER_CATEGORY_ERROR": "An error occurred while moving the category!",
+    "API_FORUM_DELETE_CATEGORY_ERROR": "An error occurred while deleting the category!",
     "API_FORUM_POST_NO_TITLE": "The title was not given!",
+    "API_FORUM_POST_NO_CONTENT": "The content was not given!",
     "API_FORUM_POST_CREATE_ERROR": "An error occurred while creating the post!",
     "API_FORUM_NOPAGE": "No page was given!",
     "API_FORUM_NOSIZEPAGE": "No page size was given!",
@@ -105,11 +120,14 @@
     "API_FORUM_POST_NOACCESS": "You do not have access to this post!",
     "API_FORUM_DELETE_POST_ERROR": "An error occurred while deleting the post!",
     "API_FORUM_CATEGORY_NOT_FOUND": "The category is not found!",
+    "API_FORUM_GET_POSTS_ERROR": "An unexcepted error occurred while getting the posts!",
+    "API_FORUM_GET_RESPONSES_ERROR": "An unexcepted error occurred while getting the responses!",
 
+    "API_FAQ_GET_FAQ_ERROR": "An error occurred while getting the FAQ!",
     "API_FAQ_NO_QUESTION_GIVEN": "No given question!",
     "API_FAQ_NO_ANSWER_GIVEN": "No answer given!",
-    "API_FAQ_CREATE_FAQ_ERROR": "An error occured while creating your question!",
-    "API_FAQ_DELETE_FAQ_ERROR": "An error occured while deleting your question!",
+    "API_FAQ_CREATE_FAQ_ERROR": "An error occurred while creating your question!",
+    "API_FAQ_DELETE_FAQ_ERROR": "An error occurred while deleting your question!",
 
     "DASHBOARD_MENU_ROOT": "Home",
     "DASHBOARD_MENU_TESTS": "Tests",
@@ -167,6 +185,10 @@
     "DASHBOARD_FORUMPOST_REPLYBTN": "Reply",
 
     "DASHBOARD_TICKETS_TITLE": "Tickets",
+    "DASHBOARD_TICKETS_NEWBTN": "Open new ticket",
+    "DASHBOARD_TICKETS_MODAL_MAINTITLE": "New ticket",
+    "DASHBOARD_TICKETS_MODAL_TITLE": "Title of ticket",
+    "DASHBOARD_TICKETS_MODAL_ADDBTN": "Create the ticket",
     "DASHBOARD_TICKETS_NOTICKET": "You do not have created any ticket yet",
     "DASHBOARD_TICKETS_TICKETTITLE": "Title",
     "DASHBOARD_TICKETS_STATUS": "Status",
@@ -192,6 +214,22 @@
     "DASHBOARD_ADMIN_SEARCH_BANNED": "Banned ?",
     "DASHBOARD_ADMIN_SEARCH_ACTIONS": "Actions",
     "DASHBOARD_ADMIN_SEARCH_EDITBTN": "Edit",
+    "DASHBOARD_ADMIN_TICKETS_FILTERBTN": "Filters",
+    "DASHBOARD_ADMIN_TICKETS_NOTICKET": "No ticket has been found yet",
+    "DASHBOARD_ADMIN_TICKETS_TICKETTITLE": "Title",
+    "DASHBOARD_ADMIN_TICKETS_AUTHOR": "Author",
+    "DASHBOARD_ADMIN_TICKETS_STATUS": "Status",
+    "DASHBOARD_ADMIN_TICKETS_CREATEDAT": "Created At",
+    "DASHBOARD_ADMIN_TICKETS_UPDATEDAT": "Updated At",
+    "DASHBOARD_ADMIN_TICKET_UPDATE_CONFIRM_TITLE": "Are you sure of your action?",
+    "DASHBOARD_ADMIN_TICKET_UPDATE_CONFIRM_CONFIRM": "I confirm that",
+    "DASHBOARD_ADMIN_TICKET_UPDATE_CONFIRM_CANCEL": "Cancel the action",
+    "DASHBOARD_ADMIN_MODAL_TICKET_TITLE": "Ticket",
+    "DASHBOARD_ADMIN_TICKET_NOCOMMENT": "No comment yet",
+    "DASHBOARD_ADMIN_TICKET_COMMENT_AUTHOR": "Author",
+    "DASHBOARD_ADMIN_TICKET_COMMENT_CONTENT": "Content",
+    "DASHBOARD_ADMIN_TICKET_COMMENT_CREATEDAT": "Created At",
+    "DASHBOARD_ADMIN_TICKET_MODAL_NEWCOMMENT": "Add the comment",
     "DASHBOARD_ADMIN_INVITE_TITLE": "Invite a new member",
     "DASHBOARD_ADMIN_INVITE_EMAIL": "Member's email",
     "DASHBOARD_ADMIN_INVITE_FIRSTNAME": "Member's firstname",
@@ -225,13 +263,24 @@
     "API_ADMIN_INVITE_NO_LASTNAME": "No lastname given!",
     "API_ADMIN_INVITE_NO_ROLE": "No role given!",
     "API_ADMIN_INVITE_NO_LANG": "No mail lang given!",
-    "API_ADMIN_INVITE_CREATE_ERROR": "A unexcepted error occured while creating the invite!",
-    "API_ADMIN_INVITE_SEND_ERROR": "A unexcepted error occured while sending the email invite!",
+    "API_ADMIN_INVITE_CREATE_ERROR": "A unexcepted error occurred while creating the invite!",
+    "API_ADMIN_INVITE_SEND_ERROR": "A unexcepted error occurred while sending the email invite!",
     "API_ADMIN_INVITE_SEND_SUCCESS": "has been invited!",
 
     "API_ADMIN_USER_NOT_FOUND": "The user has not been found!",
     "API_ADMIN_USER_UPDATE_ERROR": "An unexcepted error occurred during the user update!",
     "API_ADMIN_USER_UPDATE_SUCCESS": "The user has been updated well!",
+
+    "API_ADMIN_TICKET_SEARCH_NO_CRITERIA": "No search criteria has been given!",
+    "API_ADMIN_TICKET_SEARCH_NOPAGE": "No page given!",
+    "API_ADMIN_TICKET_SEARCH_NOSIZEPAGE": "No page size given!",
+    "API_ADMIN_TICKET_GET_TICKETS_ERROR": "An unexcepted error occurred while getting tickets",
+    "API_ADMIN_TICKET_NOT_FOUND": "The ticket has not been found!",
+    "API_ADMIN_TICKET_UPDATE_ERROR": "An unexcepted error occurred while updating the ticket",
+    "API_ADMIN_TICKET_UPDATE_SUCCESS": "The ticket has been updated!",
+    "API_ADMIN_TICKET_COMMENT_NOAUTHOR": "No author given!",
+    "API_ADMIN_TICKET_COMMENT_NOCONTENT": "No message given!",
+    "API_ADMIN_TICKET_CREATE_COMMENT_ERROR": "An unexcepted error occurred while creating your comment",
 
     "API_ADMIN_INVITE_MAIL_TITLE": "Testify - Register",
     "API_ADMIN_INVITE_MAIL_WELCOME": "Welcome",
